Añadí las clases que estaban en otro proyecto (los unifiqué). Luego traté de unificar APIs pero se complicó y se chocolateó este asunto.